add reverse calculation

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                     <div class="left">
                         <div>
                             <label for="buyer_price">Buyer Price:</label>
-                            <input id="buyer_price" type="number" onkeyup="script.update();" />
+                            <input id="buyer_price" type="number" onkeyup="script.update('buyer');" />
                         </div>
                         <div>
                             <label for="seller_gain">Seller Gain:</label>
-                            <span id="seller_gain"></span>
+                            <input id="seller_gain" type="number" onkeyup="script.update('seller');" />
                         </div>
                         <div>
                             <label for="fees">Fees:</label>
